# simplexsdl

./: CMakeLists.txt  LICENSE  README.md  simplexsdl.hpp
include/: CMYColor.hpp  Event.hpp  EventClass.hpp  Font.hpp  Framework.hpp  MouseButton.hpp  MouseEvent.hpp  MouseEventType.hpp  RGBColor.hpp  Rectangle.hpp  Renderer.hpp  Surface.hpp  Texture.hpp  Window.hpp  WindowEvent.hpp  WindowEventType.hpp
src/: CMYColor.cpp  Event.cpp  Font.cpp  Framework.cpp  MessageBox.cpp  MouseEvent.cpp  RGBColor.cpp  Rectangle.cpp  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp  WindowEvent.cpp
